bk_ida/gccida/c1/verify_tree
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1493:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1498:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1720:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)v8); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1720:36: error: expected ')'
rtl_op = first_rtl_op( ( tree_code)v8); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1720:22: note: to match this '('
rtl_op = first_rtl_op( ( tree_code)v8); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1736:23: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( !first_rtl_op( ( tree_code)v8) ) 
                      ^~~~~~~~~
                      tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1736:33: error: expected ')'
if ( !first_rtl_op( ( tree_code)v8) ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/c-common.c:1736:19: note: to match this '('
if ( !first_rtl_op( ( tree_code)v8) ) 
                  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/verify_tree/src/obj/c-common.o] Error 1
